# BT_Server

./: .gitignore  LICENSE  README.md
doc/: api.md
docker/: docker-compose-build.yml  sources.list.163
docker/admin_server/: Dockerfile
docker/admin_server/public/: manifest.json
docker/auth_server/: Dockerfile
docker/business_server/: Dockerfile
docker/core_proxy_server/: Dockerfile
docker/db_proxy_server/: Dockerfile  README.md  dbproxyserver.conf  main.sh
docker/develop_server/: Dockerfile  README.md  main.sh
docker/develop_server_base/: Dockerfile  README.md
docker/file_server/: Dockerfile  README.md  fileserver.conf  main.sh
docker/http_msg_server/: Dockerfile  README.md  httpmsgserver.conf  main.sh
docker/login_server/: Dockerfile  README.md  loginserver.conf  main.sh
docker/msfs_server/: Dockerfile  README.md  main.sh  msfs.conf
docker/msg_server/: Dockerfile  README.md  main.sh  msgserver.conf
docker/push_server/: Dockerfile  README.md  main.sh  pushserver.conf
docker/route_server/: Dockerfile  README.md  main.sh  routeserver.conf
docker/storage/mariadb/conf/: init.sql
docker/storage/mongodb/conf/: mongo-init.js  mongod.conf
src/admin_server/: README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
src/admin_server/src/: App.tsx  data.json  dataProvider.ts  index.tsx
src/admin_server/src/components/article/: EditArticle.tsx  ListArticle.tsx
src/admin_server/src/components/config/: CreateConfig.tsx  CreateStyle.css  EditConfig.tsx  EditStyle.css  ListConfig.tsx  ShowConfig.tsx
src/admin_server/src/components/department/: CreateArticle.tsx  ShowDepartment.tsx
src/admin_server/src/components/department/list-department/: DepartmentAvatarField.tsx  ListDepartment.tsx
src/admin_server/src/components/group/: ListGroup.tsx  ShowGroup.tsx
src/admin_server/src/components/user/: CreateUser.tsx  EditUser.tsx  ListUser.tsx  ShowUser.tsx
src/admin_server/src/mock/: department.tsx  group.tsx  mock.tsx  user.tsx
src/admin_server/src/types/: article.d.ts  department.d.ts  user.ts
src/admin_server/src/types/base/: baseRecord.d.ts
src/auth_server/src/app/http/repositories/: AuthRepository.js
src/auth_server/src/app/http/requests/: RequestValidation.js
src/business_server/: README.md  package-lock.json  package.json  server.js
src/business_server/controllers/: articleController.js  configController.js  groupController.js  index.html  userController.js
src/business_server/db/mariadb/: connect.js  init.js
src/business_server/db/mongodb/: connect.js
src/business_server/db/mongodb/models/: article.js
src/business_server/routes/: articleRoutes.js  configRoutes.js  testRoutes.js
src/business_server/utils/: logger.js
src/core_proxy_server/: README.md
src/core_proxy_server/etc/nginx/: nginx.conf
src/core_proxy_server/html/: index.html
src/im_server/: CMakeLists.txt  build.sh  monitor.sh  restart.sh
src/im_server/base/: BaseSocket.cpp  CMakeLists.txt  Condition.cpp  EventDispatch.h  ImPduBase.cpp  Lock.cpp  ServInfo.cpp  ServInfo.h  Thread.cpp  ThreadPool.cpp  UtilPdu.cpp  UtilPdu.h  atomic.h  imconn.cpp  imconn.h  netlib.cpp  netlib.h  public_define.h  util.cpp  util.h
src/im_server/base/pb/protocol/: IM.Buddy.pb.h  IM.File.pb.h  IM.Login.pb.h  IM.Message.pb.cc
src/im_server/base/slog/: slog_api.h
src/im_server/db_proxy_server/: AutoPool.cpp  AutoPool.h  CMakeLists.txt  CachePool.cpp  CachePool.h  DBPool.cpp  DBPool.h  HandlerMap.cpp  HandlerMap.h  ProxyConn.cpp  ProxyConn.h  ProxyTask.cpp  ProxyTask.h  README.md  SyncCenter.cpp  SyncCenter.h  db_proxy_server.cpp  dbproxyserver.conf
src/im_server/db_proxy_server/business/: AudioModel.cpp  AudioModel.h  DepartAction.cpp  DepartAction.h  DepartModel.cpp  DepartModel.h  ExterLogin.h  FileAction.cpp  FileAction.h  FileModel.cpp  FileModel.h  GroupAction.cpp  GroupAction.h  GroupMessageModel.cpp  GroupMessageModel.h  GroupModel.cpp  GroupModel.h  InterLogin.cpp  Login.cpp  Login.h  LoginStrategy.h  MessageCounter.cpp  MessageCounter.h  MessageModel.cpp  MessageModel.h  RecentSession.cpp  RecentSession.h  RelationModel.cpp  RelationModel.h  SessionModel.cpp  SessionModel.h  UserAction.cpp  UserAction.h  UserModel.cpp  UserModel.h
src/im_server/file_server/: CMakeLists.txt  FileConn.cpp
src/im_server/http_msg_server/: AttachData.h  CMakeLists.txt  DBServConn.cpp  DBServConn.h  HttpConn.cpp  HttpConn.h  HttpQuery.cpp  http_msg_server.cpp
src/im_server/login_server/: CMakeLists.txt  HttpConn.cpp  HttpConn.h  LoginConn.cpp  LoginConn.h  README.md  ipparser.cpp  ipparser.h  login_server.cpp  loginserver.conf
src/im_server/msfs/: CMakeLists.txt  FileManager.cpp  main.cpp
src/im_server/msg_server/: CMakeLists.txt  DBServConn.cpp  FileHandler.cpp  FileServConn.cpp  ImUser.cpp  MsgConn.cpp  MsgConn.h  README.md  RouteServConn.cpp  msg_server.cpp  msgserver.conf
src/im_server/pb/protocol/: IM.BaseDefine.pb.cc  IM.Group.pb.cc  IM.Internal.pb.h  IM.Message.pb.h  IM.Server.pb.cc  IM.Server.pb.h  IM.SwitchService.pb.cc  IM.SwitchService.pb.h
src/im_server/push_server/: CMakeLists.txt
src/im_server/route_server/: CMakeLists.txt  README.md  RouteConn.cpp  RouteConn.h  UserInfo.cpp  UserInfo.h  route_server.cpp
src/im_server/security/: start.sh
src/im_server/security/android/jni/: CMakeLists.txt  security.cpp
src/im_server/security/android/jni/test/: Makefile
src/im_server/security/android/src/com/lsx/bigtalk/: Security.java
src/im_server/security/include/: security.h
src/im_server/slog/: CMakeLists.txt  slog_api.cpp  slog_api.h
src/im_server/test/: Makefile
src/im_server/tools/: Makefile  daeml.cpp
src/im_server/websocket_server/: CMakeLists.txt  WebSocketConn.cpp  WebSocketConn.h  websocket_server.cpp
src/im_server/websocket_server/websocket/: CMakeLists.txt
src/pb/: IM.BaseDefine.proto  IM.Buddy.proto  IM.File.proto  IM.Group.proto  IM.Internal.proto  IM.Login.proto  IM.Message.proto  IM.Other.proto  IM.Server.proto  IM.SwitchService.proto  README.md  create.sh  sync.sh
(+3 files in other folders)
