cmake_minimum_required(VERSION 2.6)
PROJECT(Base)

AUX_SOURCE_DIRECTORY(./ ROOT_SRC_LIST)
AUX_SOURCE_DIRECTORY(./pb/protocol PB_SRC_LIST)
AUX_SOURCE_DIRECTORY(./jsoncpp JSONCPP_SRC_LIST)

SET(PB_LIB_DIR ./pb/lib/linux)

SET(LIBRARY_OUTPUT_PATH ./)

ADD_DEFINITIONS(-g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
                -DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
                -DAC_HAS_DEBUG -DLINUX_DAEMON -std=c++17)

INCLUDE_DIRECTORIES(./ ../ ./jsoncpp ./pb ./pb/protocol)

LINK_DIRECTORIES(./ ${PB_LIB_DIR} ./slog/lib)

ADD_LIBRARY(base ${ROOT_SRC_LIST} ${PB_SRC_LIST} ${JSONCPP_SRC_LIST})

TARGET_LINK_LIBRARIES(base pthread slog crypto)
