cmake_minimum_required(VERSION 2.6)
PROJECT(slog)

AUX_SOURCE_DIRECTORY(./ ROOT_SRC_LIST)

SET(CMAKE_MACOSX_RPATH 1)
SET(LIBRARY_OUTPUT_PATH .)
ADD_DEFINITIONS(-g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
								-DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
								-DAC_HAS_DEBUG -std=c++17 -D _GLIBCXX_USE_CXX11_ABI=1 -DLINUX_DAEMON)

INCLUDE_DIRECTORIES(./ ./include ./include/log4cxx)
LINK_DIRECTORIES(./ ./lib)

ADD_LIBRARY(slog SHARED ${ROOT_SRC_LIST})
TARGET_LINK_LIBRARIES(slog log4cxx)
